# egx_radar

./: .dockerignore  .export_entry_points.txt  .export_json_candidates.txt  .export_py_files.txt  .gitignore  .markdownlint.json  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  CONFIGURATION.md  DASHBOARD_GUIDE.md  DATABASE_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  EGX_RADAR_360_AUDIT_FINAL.md  EGX_RADAR_360_AUDIT_REPORT.md  EGX_RADAR_FULL_CODE_EXPORT.md  EGX_Radar_Backtest_2026-03-02_03-45.csv  EGX_Radar_Backtest_2026-03-02_06-43.csv  EGX_Radar_Backtest_2026-03-03_02-38.csv  EGX_Radar_Backtest_2026-03-05_03-14.csv  EGX_Radar_Backtest_2026-03-05_07-07.csv  EGX_Radar_Backtest_2026-03-08_12-53.csv  EGX_Radar_Backtest_2026-03-10_10-16.csv  EGX_Radar_Backtest_2026-03-11_10-34.csv  EGX_Radar_Backtest_2026-03-11_20-39.csv  EGX_Radar_Backtest_2026-03-13_14-14.csv  EGX_Radar_Backtest_2026-03-14_03-12.csv  EGX_Radar_Backtest_2026-03-14_05-03.csv  EGX_Radar_Backtest_2026-03-14_20-58.csv  EGX_Radar_Backtest_2026-03-14_22-23.csv  EGX_Radar_Backtest_2026-03-14_22-37.csv  EGX_Radar_Backtest_2026-03-14_22-56.csv  EGX_Radar_Backtest_2026-03-14_23-23.csv  EGX_Radar_Backtest_2026-03-15_17-37.csv  EGX_Radar_Backtest_2026-03-15_18-14.csv  EGX_Radar_Backtest_2026-03-17_17-42.csv  EGX_Radar_v083_2026-03-05_03-15-08.csv  EGX_Radar_v083_2026-03-05_06-57-03.csv  (+105 more)
archive/: egx_radar_v83.py
egx_radar/: EGX_RADAR_FULL_SOURCE.md  EGX_RADAR_FULL_SOURCE.py  __init__.py  __main__.py  backup.py  (+19 more)
egx_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+221 files in other folders)
