[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egx-radar"
version = "0.8.0"
description = "EGX Capital Flow Radar - Algorithmic Trading System"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "EGX Radar Team"}
]
dependencies = [
    "pandas>=1.3.0",
    "pandas-ta-classic>=0.3.15,<0.5",
    "yfinance>=0.1.70",
    "requests>=2.26.0",
    "Flask>=3.0,<4.0",
    "Flask-Cors>=4.0,<5.0",
    "flask-socketio>=5.0,<6.0",
    "Flask-Login>=0.6,<0.7",
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
egx-radar = "egx_radar.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egx_radar*"]

[tool.setuptools.package-data]
egx_radar = ["*.json", "*.csv"]
